<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.InformationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Informasi"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/arrow_back_24px"
        android:background="@color/red"
        android:layout_marginBottom="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/kpu_logo"
        android:contentDescription="Logo"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_aplikasi"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/grey_onbackground"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textColor="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:textStyle="normal"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by_yazid"
        android:textStyle="normal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"/>

</LinearLayout>