<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.FormEntryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Form"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/arrow_back_24px"
        android:background="@color/red"
        android:layout_marginBottom="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/nik"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="Masukkan NIK"
            android:textSize="14sp"
            android:textColor="@color/grey_onbackground"
            android:textColorHint="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/nama"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="Masukkan Nama"
            android:textSize="14sp"
            android:textColor="@color/grey_onbackground"
            android:textColorHint="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/no_hp"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nohp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="Masukkan No. HP"
            android:textSize="14sp"
            android:textColor="@color/grey_onbackground"
            android:textColorHint="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/jenis_kelamin"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="L"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_semibold"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radio_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            android:text="P"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tanggal"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tanggal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="Masukkan Tanggal"
            android:textSize="14sp"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/grey_onbackground"
            android:textColorHint="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/alamat"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="Ambil Lokasi saat ini"
            android:textSize="14sp"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/grey_onbackground"
            android:textColorHint="@color/grey_onbackground"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/gambar_pendataan"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/btn_image_picker"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:text="@string/pilih_gambar"
        android:textSize="11sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        tools:text="test.jpg"
        android:textSize="11sp"
        android:layout_marginStart="20dp"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit"
        android:textSize="14sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"/>

</LinearLayout>